# bevy_games_0_15

./: Cargo.toml
assets/simple_gun_battle/: gun.glb  health_bar.wgsl  scene_0.glb  scene_1.glb
assets/simple_gun_battle/blender/: gun.blend  scene_1.blend  scene_hunt_0.blend
